<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppCompatToolbar</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_default_title">Show Default Title</string>
    <string name="action_custom_title">Show Custom Title/Subtitle</string>
    <string name="action_hide_title">Hide Title/Subtitle</string>
    <string name="action_default_logo">Show Default Logo</string>
    <string name="action_custom_logo">Show Custom Logo</string>
    <string name="action_hide_logo">Hide Logo</string>
    <string name="action_show_up_arrow">Show Up Arrow</string>
    <string name="action_hide_up_arrow">Hide Up Arrow</string>
    <string name="action_show_custom_view">Show Custom View</string>
    <string name="action_hide_custom_view">Hide Custom View</string>

</resources>
